Version 1.8.2 - 08-16-13
-Added sample retiolitid graptolite dataset, try data(retiolinae)
-Small fix to time-scaling functions to avoid bug associated with geiger 1.99

Version 1.8.1 - 04-03-13
-Removed dependency on geiger by changing plotTraitgram to only use ace in ape

Version 1.8 - 02-22-13
-simTermTaxaAdvanced had a bug which scrambled taxon names; this is fixed
-Small changes to error checking in trueTermTaxaTree to stop erroneous error messages in environments with excessive numeric precision
-added new argument 'int.times' to multiDiv to allow prior intervals to be added (note this change previosuly accidentally left out of v1.8 changelog)
-added new argument 'inc.term.adj' to timePaleoPhy at the suggestion of Shan Huang which allows terminal ranges to be included for adjusting branch lengths under the various non-'basic' timescaling method options

Version 1.7 - 12-30-12
-added new argument 'point.occur' bin_timePaleoPhy and bin_cal3TimePaleoPhy to allow for datasets composed on point-occurance/single-find taxa (i.e. FAD is equal to LAD for all taxa), following a conversation with G. Hunt
-Altered sampleRanges so that taxa with last occurance at time=0 were treated as 'live' even if input was only a two-column matrix of ranges and not a 'simFossilTaxa' matrix result
-Added a new 'advanced' version of the terminal-taxa / candle simulator, which uses simFossilTaxa to allow for trees with extant taxa
-At the dogged insistence of my illustrious committee, I have changed the name of the 'candle' model to the 'terminal-taxon' model
-altered multiDiv, phyloDiv and taxicDivDisc so to deal with extant datasets better with new arguments and changes to interval splitting
-add minExtant and mintime options to simFossilTaxa_SRcond to more closely match simFossilTaxa
-Nodetimes slightly rounded (to six figures) in compareNodeAges, dropExtinct, dropExtant to avoid error relating to negative relative node ages