@@ -19,7 +19,7 @@
   \item{maxtaxa}{Maximum number of taxa allowed over entire simulation}
   \item{anag.rate}{Instantaneous rate of pseudoextinction/anagensis.}
   \item{prop.bifurc}{Proportion of morphological branching by bifurcating cladogenesis relative to budding cladogenesis.}
-  \item{prop.cryptic}{Proportion of cryptic speciation by relative to morphological branching, such as bifurcating and budding.}
+  \item{prop.cryptic}{Proportion of cryptic speciation by relative to morphological branching, such as bifurcating and budding. Trees with cryptic taxa are always returned with cryptic taxa unmerged (see sampleRanges).}
   \item{drop.zlb}{Should zero-length branches be dropped?}
   \item{print.runs}{Print the proportion of simulations accepted for output?}
   \item{plot}{Should data be plotted as it is simulated?}
@@ -27,7 +27,7 @@
 \details{
 Essentially a complex wrapper for simFossilTaxa, sampleRanges and taxa2phylo, this function will spit out simulated phylogenies of fossil taxa where the divergence times are perfectly known, only sampled taxa are included on the tree and tips are located at the last observed time for the species (the apparent time of extinction, except for living taxa).
 
-simPaleoTrees essentially uses simFossilTaxa with no.cond as TRUE and other minimal conditioning, so as to get as unbiased a sample of simulations as possible (without exceeding the maximum constraints). This is useful for birth-death analyses, although a number of options available in simFossilTaxa are thus unavailable in simPaleoTrees. By default, there is no conditioning on the number of extant taxa, living taxa are sampled perfectly at time 0 and zero-length branches are dropped. Unlike simFossilTaxa, you cannot condition on a certain number of extant taxa, only whether they are allowed or not (via all.extinct). As of version 1.6, there are now options relating to speciation modes. By default, taxa are only simulated under budding cladogenesis but this can be changed with the arguments anag.rate, prop.bifurc and prop.cryptic.
+simPaleoTrees essentially uses simFossilTaxa with no.cond as TRUE and other minimal conditioning, so as to get as unbiased a sample of simulations as possible (without exceeding the maximum constraints). This is useful for birth-death analyses, although a number of options available in simFossilTaxa are thus unavailable in simPaleoTrees. By default, there is no conditioning on the number of extant taxa, living taxa are sampled perfectly at time 0 and zero-length branches are dropped. Unlike simFossilTaxa, you cannot condition on a certain number of extant taxa, only whether they are allowed or not (via all.extinct). As of version 1.6, there are now options relating to speciation modes. By default, taxa are only simulated under budding cladogenesis but this can be changed with the arguments anag.rate, prop.bifurc and prop.cryptic. Trees with cryptic taxa are always returned with cryptic taxa unmerged (see sampleRanges).
 
 Because the divergence times are known perfectly, yet tips are at the apparent time of extinction and unsampled taxa are dropped, one should not use the output of this analysis except for very specialized simulation analyses. The results are probably not anything like real datasets of paleontological phylogenies, at least in most aspects.
 
